--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
     	<div class="hero">
-      <img src="C:\Users\Aditya\Desktop\component newton project 2\images\illustration-hero.svg" alt="">
+      <img src="images\illustration-hero.svg" alt="">
     </div>
     <div class="text-content">
       <h2 class="title">
@@ -21,7 +21,7 @@
       </p>
       <div class="plan-box">
         <div class="plan-box-left">
-          <img src="C:\Users\Aditya\Desktop\component newton project 2\images\icon-music.svg" alt="">
+          <img src="images\icon-music.svg" alt="">
           <div>
             <h5>Annual Plan</h5>
             <p>$59.99/year</p>
