--- a/index.htm
+++ b/index.htm
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     
-    <title>ONLINE COMPONENT</title>
-    <link rel= "stylesheet" href="style.css">
+    <title>ORDER SUMMARY COMPONENT</title>
+	<link rel= "shortcut icon" type= "image/png" href= "images\favicon-32x32.png">
+    	<link rel= "stylesheet" href="style.css">
     
 </head>
 <body>
